-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b42
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018309 | 7u45 | Rickard Backman | P3 | Closed | Fixed | b01 |
| JDK-8013971 | 7u40 | Rickard Backman | P3 | Closed | Fixed | b24 |
do_suspend on the unix platforms use spin loops while waiting for the suspendee to suspend. After a while the spin loops are suposed to time out and back out. This mechanism could be better implemented with something that requires less CPU (currently spinning can cause CPU usage to go to 100%) and has a better way of specifying how long to wait before backing out.
- backported by
-
JDK-8013971 Replace spin loops as back off when suspending
-
- Closed
-
-
JDK-8018309 Replace spin loops as back off when suspending
-
- Closed
-