8011882: Replace spin loops as back off when suspending Reviewed-by: dholmes, sla